# nomad-distro-dev

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nomad.yaml
tests/: nomad.yaml
