[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]>=1.4.0",
  "setuptools",
]


[project.urls]
repository = "https://github.com/ak-feldhoff-luh/nomad-distro-dev"

[project.optional-dependencies]
plugins = [
  # Domain-specific ELN and measurement plugins
  "nomad-measurements == 1.3.5",
  "nomad-material-processing == 1.0.5",
  "nomad-analysis == 0.2.1",
  "nomad-em-parser-akfeldhoff @ git+https://github.com/glaidedata/nomad-parser-plugin-em-akfeldhoff.git@v1.0.0",

  # Pynxtools readers
  "pynxtools==0.12.0",
  "pynxtools-apm==0.4.3",
  "pynxtools-ellips==0.1.1",
  "pynxtools-em==0.4.2",
  "pynxtools-igor==0.1.4",
  "pynxtools-mpes==0.2.6",
  "pynxtools-raman==0.1.1",
  "pynxtools-spm==0.2.1",
  "pynxtools-xps==0.5.4",
  "pynxtools-xrd==0.0.7",
]
jupyter = ["jupyter-events"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.4"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "explicit"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
